--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: bu2zhouzhu的博客
+subtitle: I'll be back
 description:
 author: bu2zhouzhu
 language:
